src/third_party/blink/web_tests/virtual/web-components-v0-disabled/fast/dom/shadow/css-computed-style-declarations-length-with-dirty-distribution-crash-expected.txt
CONSOLE ERROR: line 7: Uncaught TypeError: host.createShadowRoot is not a function
Tests that CSSComputedStyleDeclaration.length with dirty distribution doesn't crash.
